libtlafmt/src/ast_format/snapshots/libtlafmt__ast_format__case__tests__fuzz_error_node_kind.snap
---
source: libtlafmt/src/ast_format/case.rs
expression: output
---
----------------------------------- MODULE B -----------------------------------Nat
== CASE > d -> 0
================================================================================
