libtlafmt/src/ast_format/snapshots/libtlafmt__ast_format__case__tests__multiline_pointer.snap
---
source: libtlafmt/src/ast_format/case.rs
expression: output
---
----------------------------------- MODULE B -----------------------------------
X == CASE self \in RM -> "RS"
    [] self = 0 -> "TS"
    [] self = 10 ->
        "BTS"
================================================================================
