libtlafmt/src/ast_format/snapshots/libtlafmt__ast_format__case__tests__other.snap
---
source: libtlafmt/src/ast_format/case.rs
expression: output
---
----------------------------------- MODULE B -----------------------------------
X == CASE
        \/ x = 0 \/ y = 0
        \/ x > N \/ y > N
        \/ ~grid[<< x, y >>] -> 0
    [] OTHER -> 1
================================================================================
